--- a/resources/locales/en/translation.json
+++ b/resources/locales/en/translation.json
@@ -1,4 +1,87 @@
 {
     "greeting": "Hello World !",
-    "success" : "success"
+    "success" : "success",
+    "success_add_data": "success create data",
+    "success_get_data": "success get data",
+    "success_update_data": "success update data",
+    "success_delete_data": "success delete data",
+    "success_get_tag_number": "success get tag number",
+    "tag_number_not_found": "tag number not found",
+    "all_data_downloaded": "all data downloaded",
+    "success_download_data": "success download data",
+    "item":{
+        "success_create_item": "success create item",
+        "success_update_item": "success update item",
+        "success_delete_item": "success delete item",
+        "success_get_item" : "success get item",
+        "sku_required": "SKU is required",
+        "tag_required": "tag number required",
+        "quantity_required": "quantity required",
+        "ref_required": "ref number required",
+        "max_tag_number": "max length of tag number",
+        "max_ref_number": "max length of ref number",
+        "tag_exist": "tag number already exist"
+    },
+    "account":{
+        "success_get_account": "success get account",
+        "success_add_account": "success add account",
+        "success_update_account": "succcess update account",
+        "success_delete_account": "success delete account"
+    },
+    "goodIssue":{
+        "success_get_gi" : "success get good issue data",
+        "all_data_in_gi" : "all data in good issue",
+        "data_already_printing": "all data already printing"
+    },
+    "goodRecieve":{
+        "success_get_gr": "success get good recieve data",
+        "all_data_in_gi": "all data in good recieve",
+        "data_already_printing": "all data already printing"
+    },
+    "history":{
+        "success_get_tag_number": "success get tag number"
+    },
+    "location":{
+        "success_add_location": "success add location",
+        "id_location_exist": "id location already exist",
+        "id_location_required": "id location is required",
+        "success_get_location": "success get location data",
+        "success_delete_location": "success delete location",
+        "success_update_location": "success update location"
+    },
+    "login":{
+        "fail_login": "wrong email or password"
+    },
+    "monitoring":{
+        "auto_putway": "success update data",
+        "add_monitoring": "success add item to monitoring",
+        "tag_number_not_found": "tag number not found "
+    },
+    "orderList":{
+        "data_not_found": "data not found"
+    },
+    "outbound":{
+        "please_select_item": "please select item"
+    },
+    "packing":{
+        "packet_confirmed": "packet confirmed"
+    },
+    "QC":{
+        "sku_confirmed": "SKU confirmed"
+    },
+    "reader":{
+        "success_add_reader": "success add reader",
+        "max_length_of_name": "max length of name",
+        "success_update_reader": "success update reader",
+        "max_length_of_reader": "max length of reader",
+        "server_not_found": "server not found",
+        "account_dont_have_reader": "account don't have reader"
+    },
+    "stockTake":{
+        "all_data_reported": "all data reported "
+    },
+    "inbound":{
+        "success_recieve_items": "succes recieve items",
+        "please_select_item_to_move": "please select items to move"
+    }
 }
