add 2 lang import items

--- a/resources/locales/en/translation.json
+++ b/resources/locales/en/translation.json
@@ -105,6 +105,7 @@
         "item_code_required": "item code is required",
         "ref_number_required": "ref number is requirerd",
         "tag_number_required": "tag number is required",
+        "item_type_required": "item type is required",
         "format_does_not_match": "format does not match",
         "cant_upload": "can't upload filename"
     },
